package DP.Tutorial.AbstractFactory.ToyStore;

public interface Car {
}
