package DP.Tutorial.AbstractFactory.ToyStore;

public interface Plane {


}
