package DP.Tutorial.AbstractFactory.Toys.Materials;

public abstract class Keys {

    //    public String name;
    abstract Keys getKeys();

}
