package DP.Tutorial.AbstractFactory.Toys.Materials;

public interface Wheels {

    Wheels getWheels();

}
