package DP.Tutorial.AbstractFactory.Toys.Materials;

public interface Wings {

    Wings getWings();

}
