package DP.Tutorial.Singleton;

public class Test {

    public static void main(String[] args) {

        Constitution c1 = new Constitution();
        c1.give_permission();

        Constitution c2 = new Constitution();
        c2.set_rules();

    }
}
